--- a/apresentacao/apresentacao.tex
+++ b/apresentacao/apresentacao.tex
@@ -332,7 +332,14 @@ Sistema de login com nome de utilizador (\texttt{Username}) e palavra-passe (\te
 \end{frame}
 
 \begin{frame}
-\frametitle{Destaque de funcionalidade}
+\frametitle{Destaque de funcionalidades: tabelas}
+\begin{center} \includegraphics[scale=0.26]{feature1.png} \end{center}
+\end{frame}
+\begin{frame}
+\begin{center} \includegraphics[scale=0.26]{feature1.png} \end{center}
+\end{frame}
+\begin{frame}
+\begin{center} \includegraphics[scale=0.26]{feature1.png} \end{center}
 \end{frame}
 
 \begin{frame}
