--- a/apresentacao/apresentacao.tex
+++ b/apresentacao/apresentacao.tex
@@ -253,7 +253,7 @@ Salário base
 \begin{frame}[fragile]
 \begin{center}
 \begin{tabular}{p{60mm} p{0mm} p{40mm}}
-	\texttt{Person} & & \\	
+	\texttt{Services} & & \\	
 	\lstinputlisting[firstline=1,lastline=25]{../codigo/data/services/services.txt} & &
 \begin{lstlisting}
 ID do próx. serviço a adicionar
