--- a/apresentacao/apresentacao.tex
+++ b/apresentacao/apresentacao.tex
@@ -378,7 +378,7 @@ Divisão de tarefas para componente individual mais difícil.\\
 \begin{minipage}[t]{0.33\linewidth}
 	\textbf{Diogo Rodrigues}
 	{\footnotesize \begin{itemize}
-		\item \texttt{utils}: quase tudo, incluindo \texttt{stringregex}, \texttt{mergesort}, \texttt{findif}		
+		\item \texttt{utils}: quase tudo, incluindo \texttt{string\_regex}, \texttt{mergesort}, \texttt{find\_if}		
 		\item \texttt{Person} e todas as classes derivadas
 		\item \texttt{Truck}: reescreveu
 		\item \texttt{Cargo}: reescreveu				
@@ -386,6 +386,7 @@ Divisão de tarefas para componente individual mais difícil.\\
 		\item \texttt{App}: tabelas, opções das tabelas e mostrar detalhes de entidades
 		\item \texttt{Time}, \texttt{Address}, \texttt{Phonenumber}, \texttt{Temperature}, \texttt{VAT}
 		\item \texttt{Service} e função de atribuição
+		\item Apresentação
 	\end{itemize} }
 \end{minipage}%
 \begin{minipage}[t]{0.33\linewidth}
