--- a/apresentacao/apresentacao.tex
+++ b/apresentacao/apresentacao.tex
@@ -337,15 +337,17 @@ Sistema de login com nome de utilizador (\texttt{Username}) e palavra-passe (\te
 
 \begin{frame}
 \frametitle{Destaque de funcionalidades: tabelas}
-\begin{center} \includegraphics[scale=0.26]{feature1.png} \end{center}
+\begin{center} \includegraphics[scale=0.25]{feature1.png} \end{center}
+\end{frame}
+
+\begin{frame}%
+\texttt{\small sort 1}
+\begin{center} \includegraphics[scale=0.25]{feature2.png} \end{center}
 \end{frame}
 
 \begin{frame}
-\begin{center} \includegraphics[scale=0.26]{feature1.png} \end{center}
-\end{frame}
-
-\begin{frame}
-\begin{center} \includegraphics[scale=0.26]{feature1.png} \end{center}
+\texttt{\small time 2019/11/01 2019/12/01}
+\begin{center} \includegraphics[scale=0.25]{feature3.png} \end{center}
 \end{frame}
 
 \begin{frame}
