--- a/apresentacao/apresentacao0.tex
+++ b/apresentacao/apresentacao0.tex
@@ -62,7 +62,7 @@
  
 %Information to be included in the title page:
 \AtBeginDocument{
-\title[Tema 5 (Parte 2)]{Empresa de Transporte de Mercadorias (Parte 2)}
+\title[Tema 5 (Parte 1)]{Empresa de Transporte de Mercadorias (Parte 1)}
 \subtitle{Transportes SML}
 \author[T5G3]{
 \begin{tabular}{r l}
@@ -72,7 +72,7 @@
 \end{tabular}
 }
 \institute[FEUP/AEDA]{Faculdade de Engenharia da Universidade do Porto \\ Algoritmos e Estruturas de Dados (AEDA) - Turma 5, grupo 3} 
-\date[04/jan/2020]{4 de janeiro de 2020}
+\date[16/nov/2019]{16 de novembro de 2019}
 }
 
 \begin{document}
@@ -87,13 +87,10 @@ Modelar um problema recorrendo ao paradigma da orientação por objetos e usar a
 A empresa Transportes SML é especialista no transporte de mercadorias. A empresa possui um número fixo de camiões de diferentes tipos, específicos para o transporte de determinada mercadoria [...]
 \end{quote}
 \begin{quote}
-Use uma árvore binária de pesquisa para guardar os motoristas da empresa, que devem estar ordenados por número de horas de serviço diárias já efetuadas.
+Os clientes podem requisitar serviços de transporte de mercadorias, o que pode obrigar ao uso de múltiplos camiões por parte da empresa.
 \end{quote}
 \begin{quote}
-Considere uma fila de prioridade que guarda informação sobre oficinas.
-\end{quote}
-\begin{quote}
-Os clientes inativos [...] devem ser guardados numa tabela de dispersão.
+Interessa conhecer os valores mensais que a empresa retira dos seus serviços de transporte, para cada um dos tipos de camião e no geral. Deve ser possível monitorar os clientes da empresa e serviços efetuados.
 \end{quote}
 \end{frame}
 
@@ -121,7 +118,66 @@ Quando um serviço (\texttt{Service}) é criado, são automaticamente atribuído
 \end{frame}
 
 \begin{frame}
-\frametitle{Estruturas de dados não-lineares}
+\frametitle{Permissões}
+\textbf{Todos os utilizadores}
+\begin{itemize}
+	\item Visualizar e alterar os seus dados pessoais
+\end{itemize}
+
+\textbf{Cliente}
+\begin{itemize}
+	\item Criar um novo serviço em seu nome
+	\item Eliminar um serviço em seu nome
+	\item Visualizar os seus serviços
+\end{itemize}
+
+\textbf{Condutor}
+\begin{itemize}
+	\item Visualizar os serviços que lhe foram atribuídos
+	\item Visualizar a lista de camiões
+\end{itemize}
+
+\textbf{Gestor}
+\begin{itemize}
+	\item Criar e eliminar serviço em nome de qualquer cliente
+	\item Criar, editar e eliminar clientes, condutores, gestores e camiões
+	\item Visualizar todos os clientes, condutores, gestores, camiões e serviços
+\end{itemize}
+\end{frame}
+
+\begin{frame}
+\frametitle{Diagramas de herança}
+\begin{center}
+\centering
+$\vcenter{\hbox{\includegraphics[scale=0.3]{{inherit_graph_2}}}}$ \hspace*{12px}
+$\vcenter{\hbox{\includegraphics[scale=0.3]{{classCargo__inherit__graph}}}}$
+\end{center}
+\begin{center}
+\centering
+$\vcenter{\hbox{\includegraphics[scale=0.3]{{classPerson__inherit__graph}}}}$\hspace*{12px}
+$\vcenter{\hbox{\includegraphics[scale=0.3]{{inherit_graph_13}}}}$\hspace*{12px}
+$\vcenter{\hbox{\includegraphics[scale=0.3]{{classutils_1_1string__regex__inherit__graph}}}}$
+\end{center}
+\end{frame}
+
+\begin{frame}
+\frametitle{Diagrama de classes \texttt{Cargo} e \texttt{Truck}}
+\begin{center} \includegraphics[scale=0.36]{{Cargo_Truck_class_diagram}} \end{center}
+\end{frame}
+
+\begin{frame}
+\frametitle{Diagrama de classes \texttt{Person}}
+\begin{center} \includegraphics[scale=0.35]{{Person_class_diagram}} \end{center}
+\end{frame}
+
+\begin{frame}
+\frametitle{Diagrama de classes \texttt{Service}}
+\begin{center} \includegraphics[scale=0.37]{{Service_class_diagram}} \end{center}
+\end{frame}
+
+\begin{frame}
+\frametitle{Diagrama de classes \texttt{utils::string\_regex}}
+\begin{center} \includegraphics[scale=0.40]{{string_regex_class_diagram}} \end{center}
 \end{frame}
 
 \begin{frame}
@@ -229,6 +285,28 @@ Distância
 \end{tabular}
 \end{center}
 \end{frame}
+ 
+\begin{frame}
+\frametitle{Exceções tratadas}
+\texttt{App::InvalidCredentials}: introduzidas credenciais erradas\\
+\texttt{App::RepeatedId}: detetado um ID repetido quando o ID é único\\
+\texttt{Temperature::InvalidTemperature}\\
+\texttt{TemperatureRange::InvalidTemperatureRange}: gama de temperaturas inválida\\
+\texttt{Time::InvalidTimeFormat}: formato errado\\
+\texttt{Time::InvalidTime}\\
+\texttt{utils::ufloat<T>::InvalidUFloat}\\
+\texttt{utils::string\_regex::FailedRegex}: string introduzida não corresponde a regex\\
+\texttt{std::invalid\_argument}\\
+\texttt{std::system\_error} 
+\end{frame}
+
+\begin{frame}
+\frametitle{Exemplo de exceção: \texttt{utils::string\_regex::FailedRegex}}
+\begin{center} \begin{minipage}{0.95\linewidth}
+\lstinputlisting[language=C++, caption={utils.h, L239-254}, firstline=239, lastline=254]{../codigo/include/utils.h}
+\lstinputlisting[language=C++, caption={utils.cpp, L129-134}, firstline=129, lastline=134]{../codigo/src/utils.cpp}
+\end{minipage} \end{center}
+\end{frame}
 
 \begin{frame}
 \frametitle{Lista de funcionalidades}
@@ -258,7 +336,27 @@ Sistema de login com nome de utilizador (\texttt{Username}) e palavra-passe (\te
 \end{frame}
 
 \begin{frame}
-\frametitle{Destaque de funcionalidade}
+\frametitle{Destaque de funcionalidades: tabelas}
+\begin{center} \includegraphics[scale=0.25]{feature1.png} \end{center}
+\end{frame}
+
+\begin{frame}%
+\texttt{\small sort 1}
+\begin{center} \includegraphics[scale=0.25]{feature2.png} \end{center}
+\end{frame}
+
+\begin{frame}
+\texttt{\small time 2019/11/01 2019/12/01}
+\begin{center} \includegraphics[scale=0.25]{feature3.png} \end{center}
+\end{frame}
+
+\begin{frame}
+\frametitle{Destaque de funcionalidades: atribuição de serviços}
+\begin{center}
+\scalebox{.85}{
+\lstinputlisting[language=C++, aboveskip=-1em, belowskip=-1em, caption={service.cpp, L81-111}, firstline=81, lastline=111]{../codigo/src/service.cpp}
+}
+\end{center}
 \end{frame}
 
 \begin{frame}
@@ -268,14 +366,18 @@ Trabalho de grupo
 	\item Componente colaborativa
 	\item Componente individual
 \end{itemize}
-Existem muitas dependências entre classes e com a estrutura da aplicação.\par
-Divisão de tarefas para componente individual mais difícil.\par
-\textbf{Parte 2}\par
-Menos dificuldades, dado que a maior parte das funcionalidades estava completamente implementada e de forma genérica/facilmente extensível.
+Existem muitas dependências entre classes e com a estrutura da aplicação.\\
+Divisão de tarefas para componente individual mais difícil.\\
+\textbf{Tempo}
+\begin{itemize}
+	\item Como gerir o tempo na aplicação?
+	\item Pagar salários, notificar condutores dos seus futuros serviços
+	\item Marcar serviços como concluídos, não concluídos, atrasados...
+\end{itemize}
 \end{frame}
 
 \begin{frame}
-\begin{minipage}[t]{0.35\linewidth}
+\begin{minipage}[t]{0.33\linewidth}
 	\textbf{Diogo Rodrigues}
 	{\footnotesize \begin{itemize}
 		\item \texttt{utils}: quase tudo, incluindo \texttt{string\_regex}, \texttt{mergesort}, \texttt{find\_if}		
@@ -286,11 +388,10 @@ Menos dificuldades, dado que a maior parte das funcionalidades estava completame
 		\item \texttt{App}: tabelas, opções das tabelas e mostrar detalhes de entidades
 		\item \texttt{Time}, \texttt{Address}, \texttt{Phonenumber}, \texttt{Temperature}, \texttt{VAT}
 		\item \texttt{Service} e função de atribuição
-		\item BST dos motoristas
 		\item Apresentação
 	\end{itemize} }
 \end{minipage}%
-\begin{minipage}[t]{0.32\linewidth}
+\begin{minipage}[t]{0.33\linewidth}
 	\textbf{Telmo Baptista}
 	{\footnotesize \begin{itemize}
 		\item \texttt{utils}: algumas funções
@@ -299,17 +400,13 @@ Menos dificuldades, dado que a maior parte das funcionalidades estava completame
 		\item \texttt{Person}: alguns métodos
 		\item \texttt{Time}: algumas funções
 		\item \texttt{Truck}: implementou
-		\item \texttt{Workshop}: implementou
-		\item Fila de prioridade das oficinas
-		\item Tabela de dispersão de clientes inativos
 	\end{itemize} }
 \end{minipage}%
-\begin{minipage}[t]{0.32\linewidth}
+\begin{minipage}[t]{0.33\linewidth}
 	\textbf{Luís Miranda}
 	{\footnotesize \begin{itemize}
 		\item Organização da app
 		\item Permissões
-		\item Substituição de estruturas lineares por não-lineares quando adequado
 		\item Dados
 		\item Testes
 		\item Apresentação
