some changes to code

--- a/apresentacao/apresentacao.tex
+++ b/apresentacao/apresentacao.tex
@@ -297,6 +297,12 @@ Sistema de login com nome de utilizador (\texttt{Username}) e palavra-passe (\te
 
 \begin{frame}
 \frametitle{Destaque de funcionalidade}
+\textbf{Classe \texttt{Schedule}}\par
+\begin{itemize}
+	\item	Usa um \texttt{std::set} com operação de comparação personalizada
+	\item	Usa operações de pesquisa numa BST
+	\item	Iteração \textit{in-order} sobre uma árvore
+\end{itemize}
 \end{frame}
 
 \begin{frame}
