some more changes

--- a/apresentacao/apresentacao.tex
+++ b/apresentacao/apresentacao.tex
@@ -302,7 +302,9 @@ Sistema de login com nome de utilizador (\texttt{Username}) e palavra-passe (\te
 	\item	Usa um \texttt{std::set} com operação de comparação personalizada
 	\item	Usa operações de pesquisa numa BST
 	\item	Iteração \textit{in-order} sobre uma árvore
+	\item   Ordenação da tabela por tempo de trabalho
 \end{itemize}
+\begin{center} \includegraphics[scale=0.19]{{part2_feature1}} \end{center}
 \end{frame}
 
 \begin{frame}
