added crud functionalities in presentation

--- a/apresentacao/apresentacao.tex
+++ b/apresentacao/apresentacao.tex
@@ -297,6 +297,8 @@ Primeiro dia disponível para reparações
 		\item Clientes
 		\item Condutores
 		\item Gestores
+		\item Camiões
+		\item Oficinas
 	\end{itemize}
 	\item Criar, ler e eliminar serviços
 \end{itemize}
